src/test/ui/impl-trait/bindings.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:4:29
   |
LL |     const foo: impl Clone = x;
   |                             ^
   |
   = help: use the `|| { ... }` closure form instead

error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:10:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^
   |
   = help: use the `|| { ... }` closure form instead

error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:17:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^
   |
   = help: use the `|| { ... }` closure form instead

error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/bindings.rs:24:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0434`.
